--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 add_definitions(-DASIO_STANDALONE)
 
 set(SOURCES
+    src/command.cpp src/command.hpp
     src/server.cpp src/server.hpp
     src/types.hpp
     src/main.cpp
