--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ add_definitions(-DASIO_STANDALONE)
 
 set(SOURCES
     src/action.cpp   src/action.hpp
+    src/actions.cpp  src/actions.hpp
     src/args.cpp     src/args.hpp
     src/command.cpp  src/command.hpp
     src/server.cpp   src/server.hpp
