--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,4 +42,9 @@ set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "libosc++ (>= 0.8)")
 set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
 
+# source
+set(CPACK_SOURCE_GENERATOR TBZ2 ZIP)
+set(CPACK_SOURCE_PACKAGE_FILE_NAME ${PROJECT_NAME}-${PROJECT_VERSION})
+set(CPACK_SOURCE_IGNORE_FILES /\.git.*;/build.*;\.user$;/\.vscode.*)
+
 include(CPack)
