Define VERSION as string

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 add_definitions(-DASIO_STANDALONE)
-add_definitions(-DVERSION=${PROJECT_VERSION})
+add_definitions(-DVERSION="${PROJECT_VERSION}")
 
 set(SOURCES
     pgm/args.cpp    pgm/args.hpp
