CMakeLists.txt: properly depend on pthread

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 add_definitions(-DASIO_STANDALONE)
 add_definitions(-DVERSION="${PROJECT_VERSION}")
 
+find_package(Threads REQUIRED)
+
 set(SOURCES
     pgm/args.cpp    pgm/args.hpp
     src/action.cpp  src/action.hpp
@@ -21,7 +23,7 @@ set(SOURCES
 ########################
 # executable
 add_executable(${PROJECT_NAME} ${SOURCES})
-target_link_libraries(${PROJECT_NAME} osc++ pthread)
+target_link_libraries(${PROJECT_NAME} osc++ ${CMAKE_THREAD_LIBS_INIT})
 
 ########################
 include(GNUInstallDirs)
