--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ include(GNUInstallDirs)
 
 install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_BINDIR})
 install(FILES LICENSE.md README.md DESTINATION ${CMAKE_INSTALL_DOCDIR})
+install(FILES systemd/oscgard.service DESTINATION ${CMAKE_INSTALL_LIBDIR}/systemd/system/)
 install(FILES systemd/oscgard.service DESTINATION ${CMAKE_INSTALL_LIBDIR}/systemd/user/)
 
 ########################
