CMakeLists.txt: update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,34 +20,30 @@ set(SOURCES
     src/util.cpp    src/util.hpp
 )
 
+include(GNUInstallDirs)
+
 ########################
 # executable
 add_executable(${PROJECT_NAME} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} osc++ ${CMAKE_THREAD_LIBS_INIT})
 
-########################
-include(GNUInstallDirs)
-
 install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_BINDIR})
+
 install(FILES LICENSE.md README.md DESTINATION ${CMAKE_INSTALL_DOCDIR})
 install(FILES systemd/oscgard.service DESTINATION ${CMAKE_INSTALL_LIBDIR}/systemd/system/)
 install(FILES systemd/oscgard.service DESTINATION ${CMAKE_INSTALL_LIBDIR}/systemd/user/)
 
 ########################
+# package
 set(CPACK_STRIP_FILES ON)
 set(CPACK_GENERATOR DEB)
 
-set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "OSC Gateway")
 set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Dimitry Ishenko <dimitry (dot) ishenko (at) (gee) mail (dot) com>")
 
 set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
+set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "libosc++ (>= 1.0)")
 set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
-
-# source
-set(CPACK_SOURCE_GENERATOR TBZ2 ZIP)
-set(CPACK_SOURCE_PACKAGE_FILE_NAME ${PROJECT_NAME}-${PROJECT_VERSION})
-set(CPACK_SOURCE_IGNORE_FILES /\.git.*;/build.*;\.user$;/\.vscode.*)
 
 include(CPack)
