--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,4 +45,9 @@ set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "libosc++ (>= 1.0)")
 set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
 
+# source
+set(CPACK_SOURCE_GENERATOR TBZ2)
+set(CPACK_SOURCE_PACKAGE_FILE_NAME ${PROJECT_NAME}-${PROJECT_VERSION})
+set(CPACK_SOURCE_IGNORE_FILES /\.git.*;/build.*;\.user$;/\.vscode.*)
+
 include(CPack)
