CMakeLists.txt: install into /lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,12 +29,9 @@ target_link_libraries(${PROJECT_NAME} osc++ ${CMAKE_THREAD_LIBS_INIT})
 
 install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_BINDIR})
 
-install(FILES systemd/oscgard-system.service
-    DESTINATION ${CMAKE_INSTALL_LIBDIR}/systemd/system RENAME oscgard.service
-)
-install(FILES systemd/oscgard-user.service
-    DESTINATION ${CMAKE_INSTALL_LIBDIR}/systemd/user RENAME oscgard.service
-)
+install(FILES systemd/oscgard-system.service DESTINATION /lib/systemd/system RENAME oscgard.service)
+install(FILES systemd/oscgard-user.service DESTINATION /lib/systemd/user RENAME oscgard.service)
+
 install(FILES LICENSE.md README.md DESTINATION ${CMAKE_INSTALL_DOCDIR})
 
 ########################
